@@ -4,7 +4,6 @@
 
 package me.lokka30.levelledmobs.commands;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
@@ -68,33 +67,15 @@ public class LevelledMobsCommand implements CommandExecutor, TabCompleter {
             } else {
                 switch (args[0].toLowerCase()) {
                     // Retain alphabetical order please.
-                    case "debug":
-                        debugSubcommand.parseSubcommand(main, sender, label, args);
-                        break;
-                    case "egg":
-                        spawnerEggCommand.parseSubcommand(main, sender, label, args);
-                        break;
-                    case "info":
-                        infoSubcommand.parseSubcommand(main, sender, label, args);
-                        break;
-                    case "kill":
-                        killSubcommand.parseSubcommand(main, sender, label, args);
-                        break;
-                    case "reload":
-                        reloadSubcommand.parseSubcommand(main, sender, label, args);
-                        break;
-                    case "rules":
-                        rulesSubcommand.parseSubcommand(main, sender, label, args);
-                        break;
-                    case "spawner":
-                        spawnerSubCommand.parseSubcommand(main, sender, label, args);
-                        break;
-                    case "summon":
-                        summonSubcommand.parseSubcommand(main, sender, label, args);
-                        break;
-                    default:
-                        sendMainUsage(sender, label);
-                        break;
+                    case "debug" -> debugSubcommand.parseSubcommand(main, sender, label, args);
+                    case "egg" -> spawnerEggCommand.parseSubcommand(main, sender, label, args);
+                    case "info" -> infoSubcommand.parseSubcommand(main, sender, label, args);
+                    case "kill" -> killSubcommand.parseSubcommand(main, sender, label, args);
+                    case "reload" -> reloadSubcommand.parseSubcommand(main, sender, label, args);
+                    case "rules" -> rulesSubcommand.parseSubcommand(main, sender, label, args);
+                    case "spawner" -> spawnerSubCommand.parseSubcommand(main, sender, label, args);
+                    case "summon" -> summonSubcommand.parseSubcommand(main, sender, label, args);
+                    default -> sendMainUsage(sender, label);
                 }
             }
         } else {
@@ -112,8 +93,8 @@ public class LevelledMobsCommand implements CommandExecutor, TabCompleter {
     }
 
     // Retain alphabetical order please.
-    private final List<String> commandsToCheck = Arrays.asList("debug", "egg", "summon", "kill",
-        "reload", "info", "spawner", "rules");
+    private final List<String> commandsToCheck = List.of("debug", "egg", "info", "kill",
+        "reload", "rules", "spawner", "summon");
 
     @Override
     public List<String> onTabComplete(final @NotNull CommandSender sender,
@@ -130,24 +111,17 @@ public class LevelledMobsCommand implements CommandExecutor, TabCompleter {
 
             return suggestions;
         } else {
-            switch (args[0].toLowerCase()) {
+            return switch (args[0].toLowerCase()) {
                 // Retain alphabetical order please.
-                case "kill":
-                    return killSubcommand.parseTabCompletions(main, sender, args);
-                case "rules":
-                    return rulesSubcommand.parseTabCompletions(main, sender, args);
-                case "spawner":
-                    return spawnerSubCommand.parseTabCompletions(main, sender, args);
-                case "summon":
-                    return summonSubcommand.parseTabCompletions(main, sender, args);
-                case "egg":
-                    return spawnerEggCommand.parseTabCompletions(main, sender, args);
-                case "debug":
-                    return debugSubcommand.parseTabCompletions(main, sender, args);
+                case "kill" -> killSubcommand.parseTabCompletions(main, sender, args);
+                case "rules" -> rulesSubcommand.parseTabCompletions(main, sender, args);
+                case "spawner" -> spawnerSubCommand.parseTabCompletions(main, sender, args);
+                case "summon" -> summonSubcommand.parseTabCompletions(main, sender, args);
+                case "egg" -> spawnerEggCommand.parseTabCompletions(main, sender, args);
+                case "debug" -> debugSubcommand.parseTabCompletions(main, sender, args);
                 // the missing subcommands don't have tab completions, don't bother including them.
-                default:
-                    return Collections.emptyList();
-            }
+                default -> Collections.emptyList();
+            };
         }
     }
 }
