@@ -8,7 +8,6 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 import me.lokka30.levelledmobs.LevelledMobs;
 import me.lokka30.levelledmobs.managers.ExternalCompatibilityManager;
 import me.lokka30.levelledmobs.rules.strategies.RandomLevellingStrategy;
@@ -30,8 +29,7 @@ public class MetricsInfo {
 
     private final LevelledMobs main;
 
-    @NotNull
-    private String convertBooleanToString(final boolean result) {
+    @NotNull private String convertBooleanToString(final boolean result) {
         return result ? "Yes" : "No";
     }
 
@@ -47,13 +45,11 @@ public class MetricsInfo {
         return false;
     }
 
-    @NotNull
-    public String getUsesCustomDrops() {
+    @NotNull public String getUsesCustomDrops() {
         return convertBooleanToString(isCustomDropsEnabed());
     }
 
-    @NotNull
-    public String getUsesHealthIndicator() {
+    @NotNull public String getUsesHealthIndicator() {
         final boolean usesHealthIndicator =
             main.rulesParsingManager.defaultRule.healthIndicator != null &&
                 main.rulesParsingManager.defaultRule.nametag != null &&
@@ -63,8 +59,7 @@ public class MetricsInfo {
         return convertBooleanToString(usesHealthIndicator);
     }
 
-    @NotNull
-    public String getMaxLevelRange() {
+    @NotNull public String getMaxLevelRange() {
         // 1-10, 11-24, 25-50, 51-100, 101-499, 500+
         final int maxLevel = main.rulesParsingManager.defaultRule.restrictions_MaxLevel == null ?
             1 : main.rulesParsingManager.defaultRule.restrictions_MaxLevel;
@@ -84,8 +79,7 @@ public class MetricsInfo {
         }
     }
 
-    @NotNull
-    public String getCustomRulesUsed() {
+    @NotNull public String getCustomRulesUsed() {
         // 0, 1-2, 3-4, 5+
         int rulesEnabledCount = 0;
         for (final RuleInfo ruleInfo : main.rulesParsingManager.customRules) {
@@ -105,14 +99,12 @@ public class MetricsInfo {
         }
     }
 
-    @NotNull
-    public String getLevellingStrategy() {
+    @NotNull public String getLevellingStrategy() {
         // Random, Weighted Random, Spawn Distance, Blended, Y-Levelling
         final RuleInfo defaultRule = main.rulesParsingManager.defaultRule;
 
         if (defaultRule.levellingStrategy != null) {
-            if (defaultRule.levellingStrategy instanceof SpawnDistanceStrategy) {
-                final SpawnDistanceStrategy sds = (SpawnDistanceStrategy) defaultRule.levellingStrategy;
+            if (defaultRule.levellingStrategy instanceof final SpawnDistanceStrategy sds) {
                 if (sds.blendedLevellingEnabled == null || !sds.blendedLevellingEnabled) {
                     return "Spawn Distance";
                 } else {
@@ -120,9 +112,8 @@ public class MetricsInfo {
                 }
             } else if (defaultRule.levellingStrategy instanceof YDistanceStrategy) {
                 return "Y-Levelling";
-            } else if (defaultRule.levellingStrategy instanceof RandomLevellingStrategy) {
-                final RandomLevellingStrategy random = (RandomLevellingStrategy) defaultRule.levellingStrategy;
-                if (random.weightedRandom != null && !random.weightedRandom.isEmpty()) {
+            } else if (defaultRule.levellingStrategy instanceof final RandomLevellingStrategy random) {
+                if (!random.weightedRandom.isEmpty()) {
                     return "Weighted Random";
                 }
             }
@@ -131,31 +122,26 @@ public class MetricsInfo {
         return "Random";
     }
 
-    @NotNull
-    public String usesPlayerLevelling() {
+    @NotNull public String usesPlayerLevelling() {
         return convertBooleanToString(main.rulesManager.isPlayerLevellingEnabled());
     }
 
-    @NotNull
-    public String usesAutoUpdateChecker() {
+    @NotNull public String usesAutoUpdateChecker() {
         return convertBooleanToString(
             main.helperSettings.getBoolean(main.settingsCfg, "use-update-checker", true));
     }
 
-    @NotNull
-    public String levelMobsUponSpawn() {
+    @NotNull public String levelMobsUponSpawn() {
         return convertBooleanToString(
             main.helperSettings.getBoolean(main.settingsCfg, "level-mobs-upon-spawn", true));
     }
 
-    @NotNull
-    public String checkMobsOnChunkLoad() {
+    @NotNull public String checkMobsOnChunkLoad() {
         return convertBooleanToString(main.helperSettings.getBoolean(main.settingsCfg,
             "ensure-mobs-are-levelled-on-chunk-load", true));
     }
 
-    @NotNull
-    public String customEntityNamesCount() {
+    @NotNull public String customEntityNamesCount() {
         // 0, 1-3, 4-8, 9-12, 13+
         int count = 0;
         if (main.rulesParsingManager.defaultRule.entityNameOverrides != null) {
@@ -178,8 +164,7 @@ public class MetricsInfo {
         }
     }
 
-    @NotNull
-    public String usesNbtData() {
+    @NotNull public String usesNbtData() {
         if (!ExternalCompatibilityManager.hasNbtApiInstalled()) {
             return "No";
         }
@@ -201,8 +186,7 @@ public class MetricsInfo {
         return "No";
     }
 
-    @NotNull
-    public Map<String, Integer> enabledCompats() {
+    @NotNull public Map<String, Integer> enabledCompats() {
         final Map<String, Integer> results = new TreeMap<>();
 
         for (final ExternalCompatibilityManager.ExternalCompatibility compat : ExternalCompatibilityManager.ExternalCompatibility.values()) {
@@ -237,15 +221,14 @@ public class MetricsInfo {
         return results;
     }
 
-    @NotNull
-    public String nametagVisibility() {
+    @NotNull public String nametagVisibility() {
         if (main.rulesParsingManager.defaultRule.nametagVisibilityEnum == null
             || main.rulesParsingManager.defaultRule.nametagVisibilityEnum.isEmpty()) {
             return "Undefined";
         }
 
         return main.rulesParsingManager.defaultRule.nametagVisibilityEnum.stream().sorted(
-                Comparator.comparing(NametagVisibilityEnum::toString)).collect(Collectors.toList())
+                        Comparator.comparing(NametagVisibilityEnum::toString)).toList()
             .toString()
             .replace("[", "").replace("]", "");
     }
